Onboarding plus sign in/up/out

--- a/app.json
+++ b/app.json
@@ -28,6 +28,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "description": ""
+    "description": "LayerCake Production presents DSTRKT TV "
   }
 }
