--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "dstrkttv",
     "slug": "dstrkttv",
+    "owner": "stylebyjmsa",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
