--- a/package.json
+++ b/package.json
@@ -11,25 +11,30 @@
     "@freakycoder/react-native-bounceable": "^0.2.4",
     "@freakycoder/react-native-header-view": "^1.1.1",
     "@freakycoder/react-native-helpers": "^1.0.1",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.9.8",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
-    "expo": "~40.0.0",
+    "expo": "^40.0.0",
+    "expo-av": "^8.7.0",
+    "expo-camera": "~9.1.0",
+    "expo-in-app-purchases": "^9.1.0",
     "expo-status-bar": "~1.0.3",
+    "install": "^0.13.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-apple-header": "^0.1.1",
     "react-native-classic-header": "^0.1.7",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "^1.8.0",
     "react-native-gorgeous-header": "^0.1.0",
     "react-native-modern-header": "^0.1.0",
     "react-native-profile-header": "^0.1.1",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "^2.16.1",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
     "tslib": "^2.0.3"
   },
