added user modal, and new ui for channels

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@freakycoder/react-native-header-view": "^1.1.1",
     "@freakycoder/react-native-helpers": "^1.0.1",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-picker/picker": "^1.9.8",
+    "@react-native-picker/picker": "github:react-native-picker/picker",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "^40.0.0",
     "expo-av": "^8.7.0",
     "expo-camera": "~9.1.0",
+    "expo-image-picker": "~9.2.0",
     "expo-in-app-purchases": "^9.1.0",
     "expo-status-bar": "~1.0.3",
     "install": "^0.13.0",
@@ -31,6 +32,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-gorgeous-header": "^0.1.0",
     "react-native-modern-header": "^0.1.0",
+    "react-native-paper": "^4.7.0",
     "react-native-profile-header": "^0.1.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
