--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "@freakycoder/react-native-bounceable": "^0.2.4",
     "@freakycoder/react-native-header-view": "^1.1.1",
     "@freakycoder/react-native-helpers": "^1.0.1",
-    "@react-native-async-storage/async-storage": "^1.13.3",
-    "@react-native-community/datetimepicker": "^3.0.9",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/slider": "^3.0.3",
+    "@react-native-async-storage/async-storage": "^1.13.4",
+    "@react-native-community/datetimepicker": "3.0.4",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/slider": "3.0.3",
     "@react-native-firebase/app": "^10.5.0",
-    "@react-native-picker/picker": "github:react-native-picker/picker",
+    "@react-native-picker/picker": "1.9.2",
     "@react-navigation/bottom-tabs": "^5.11.6",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.1",
-    "expo": "^40.0.1",
-    "expo-av": "^8.7.0",
+    "expo": "^40.0.0",
+    "expo-av": "~8.7.0",
     "expo-camera": "~9.1.0",
     "expo-cli": "^4.1.6",
     "expo-firebase-analytics": "~2.6.0",
@@ -29,7 +29,7 @@
     "expo-image-picker": "~9.2.0",
     "expo-in-app-purchases": "^9.1.0",
     "expo-status-bar": "~1.0.3",
-    "firebase": "^8.2.4",
+    "firebase": "7.9.0",
     "install": "^0.13.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
@@ -39,16 +39,16 @@
     "react-native-apple-header": "^0.1.1",
     "react-native-classic-header": "^0.1.7",
     "react-native-dropdown-picker": "^3.7.8",
-    "react-native-gesture-handler": "^1.9.0",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-gorgeous-header": "^0.1.0",
-    "react-native-maps": "^0.27.1",
+    "react-native-maps": "0.27.1",
     "react-native-modern-header": "^0.1.0",
-    "react-native-paper": "^4.7.1",
+    "react-native-paper": "^4.4.1",
     "react-native-profile-header": "^0.1.1",
     "react-native-progress-circle": "^2.1.0",
-    "react-native-reanimated": "^1.13.2",
-    "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.15.2",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
     "react-native-select-input-ios": "^2.0.5",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
