--- a/package.json
+++ b/package.json
@@ -9,28 +9,30 @@
   },
   "dependencies": {
     "@freakycoder/react-native-bounceable": "^0.2.4",
-    "@freakycoder/react-native-header-view": "^1.1.1",
+    "@freakycoder/react-native-header-view": "^1.2.0",
     "@freakycoder/react-native-helpers": "^1.0.1",
-    "@react-native-async-storage/async-storage": "^1.13.4",
-    "@react-native-community/datetimepicker": "3.0.4",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/slider": "3.0.3",
+    "@react-native-community/slider": "4.1.7",
     "@react-native-firebase/app": "^10.5.0",
-    "@react-native-picker/picker": "1.9.2",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^5.11.6",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.1",
-    "expo": "^40.0.0",
-    "expo-av": "~8.7.0",
-    "expo-camera": "~9.1.0",
-    "expo-cli": "^4.1.6",
-    "expo-firebase-analytics": "~2.6.0",
-    "expo-firebase-core": "~1.3.0",
-    "expo-image-picker": "~9.2.0",
-    "expo-in-app-purchases": "^9.1.0",
-    "expo-status-bar": "~1.0.3",
-    "firebase": "7.9.0",
+    "@unimodules/react-native-adapter": "~6.5.0",
+    "expo": "^43.0.3",
+    "expo-av": "~10.1.3",
+    "expo-camera": "~12.0.3",
+    "expo-firebase-analytics": "~5.0.3",
+    "expo-firebase-core": "~4.0.3",
+    "expo-image-picker": "~11.0.3",
+    "expo-in-app-purchases": "~12.0.0",
+    "expo-sensors": "~11.0.3",
+    "expo-status-bar": "~1.1.0",
+    "firebase": "^9.4.1",
     "install": "^0.13.0",
+    "lottie-react-native": "4.0.3",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -39,19 +41,20 @@
     "react-native-apple-header": "^0.1.1",
     "react-native-classic-header": "^0.1.7",
     "react-native-dropdown-picker": "^3.7.8",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-elegant-header": "^0.1.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-gorgeous-header": "^0.1.0",
-    "react-native-maps": "0.27.1",
+    "react-native-maps": "0.28.1",
     "react-native-modern-header": "^0.1.0",
     "react-native-paper": "^4.4.1",
     "react-native-profile-header": "^0.1.1",
     "react-native-progress-circle": "^2.1.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
+    "react-native-reanimated": "^2.2.4",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-native-select-input-ios": "^2.0.5",
     "react-native-vector-icons": "^8.0.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.17.5",
     "tslib": "^2.1.0"
   },
   "devDependencies": {
